AWS/01-web-server/web_server_module/sg.tf
# Security Groups
resource "aws_security_group" "web-server-sg" {
    name            = "${var.server_name}-sg"
    description     = "Security Group allowing SSH and HTTP access"

    ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks  = ["0.0.0.0/0"]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks  = ["0.0.0.0/0"]   
    }

    tags = {
        Name        = "${var.server_name}-sg"
        Environment = var.environment
        Owner       = "esquivelrodriguez123@gmail.com"
        Team        = "Devops"
    }
}
